# gimp3-refocus-it-plugin

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  Makefile.msc  NEWS  README  README.md  aclocal.m4  autogen.sh  blur.h  boundary.h  compiler.h  config.h.in  configure  configure.ac  configure.in  convmask.c  convmask.h  hopfield.c  image.c  image.h  intltool-update.in  lambda.c  main.c  threshold.c  threshold.h  weights.c  xmalloc.c  xmalloc.h
.github/workflows/: main.yml
cmd-line/: Makefile.am  Makefile.in  Makefile.msc  Makefile.qnx  Makefile.unix  main-cmd.c
demo/: README
doc/: Makefile.am  Makefile.in  README
gimp-plugin/: Makefile.am  Makefile.in  main-gimp.c
help/: Makefile.am  Makefile.in  gimp-help.xml
help/C/: Makefile.am  Makefile.in  gimp-plugin-refocus-it.html  index.html
help/images/: Makefile.in
img/: defocus.pgm  restored.pgm
po/: ChangeLog  Makefile.am  POTFILES.in  cs.gmo  cs.po  gimp20-refocus-it.pot  gimp30-refocus-it.pot  refocus-it.pot
src/: Makefile.am  Makefile.in  blur.c  blur.h  boundary.c  boundary.h  compiler.h  convmask.c  convmask.h  hopfield.c  hopfield.h  image.c  image.h  lambda.c  lambda.h  threshold.c  threshold.h  weights.c  weights.h  xmalloc.c  xmalloc.h
