## Process this file with automake to produce Makefile.in

## Common sources are compiled as library
noinst_LIBRARIES	= librefocus-it.a
librefocus_it_a_SOURCES	= blur.c boundary.c convmask.c hopfield.c \
			  image.c lambda.c threshold.c \
			  weights.c
noinst_HEADERS		= blur.h boundary.h convmask.h \
			  hopfield.h threshold.h weights.h \
			  lambda.h image.h compiler.h \
			  gettext.h
